# Buildozer

./: build.py  buildozer.spec  main.py  pyproject.toml
.github/workflows/: build-android.yml
src/: main.py
src/myapp/: main.py
