[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "MyApp"
bundle = "org.test"
version = "0.0.1"
url = "https://example.com"
license = "MIT"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.myapp]
formal_name = "MyApp"
description = "A sample app"
sources = ["src/myapp"]